Adding static files

--- a/wsgi/myproject/core/templates/core/home.html
+++ b/wsgi/myproject/core/templates/core/home.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Openshift and Django App</title>
-</head>
-<body>
+{% extends 'core/base.html' %}
+
+{% block content %}
+
 	<h1>Congrats you have Django 1.6 running on OpenShift!</h1>
 	<br />
 	let's <a href="/admin">admin </a>
 	<br />
 	Enjoy!!! 
-</body>
-</html>
+
+{% endblock content %}
