Adding multiple settings and static files support

--- a/wsgi/myproject/core/templates/core/home.html
+++ b/wsgi/myproject/core/templates/core/home.html
@@ -2,10 +2,12 @@
 
 {% block content %}
 
-	<h1>Congrats you have Django 1.6 running on OpenShift!</h1>
-	<br />
-	let's <a href="/admin">admin </a>
-	<br />
-	Enjoy!!! 
+	<center>
+		<h1>Congrats you've Django 1.6 running on OpenShift!</h1>
+		<br />
+		let's <a href="/admin">admin </a>
+		<br />		
+		<p><strong>Enjoy!!!</strong></p>
+	</center>
 
 {% endblock content %}
